moving to two datasources

--- a/index.html
+++ b/index.html
@@ -6,22 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Finding Wisdom">
     <meta name="theme-color" content="#027be3">
-
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/icons/favicon-512x512.png">
-
-    <!-- PWA Manifest -->
     <link rel="manifest" href="/icons/manifest.json">
-
-    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
-
-    <!-- For Apple PWA Mode -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-
   </head>
   <body>
+    <noscript>
+      <p>This site requires JavaScript to function. Please enable JavaScript or use a compatible browser.</p>
+    </noscript>
    <!-- quasar:entry-point -->
   </body>
 </html>
